<resources>
    <string name="app_name">GURU_Android_team30</string>
    <string name="label_text">확인</string>
    <string name="header">평점</string>

    <string name="ek_img_content">ExportKit Image</string>
    <string name="________string"> </string>
    <string name="subhead_string"> </string>
    <string name="header_string"></string>
    <string name="subhead_ek1_string"></string>
    <string name="header_ek1_string"></string>
    <string name="subhead_ek2_string"></string>
    <string name="header_ek2_string"></string>
    <string name="subhead_ek3_string"></string>
    <string name="header_ek3_string"> </string>
    <string name="subhead_ek4_string"></string>
    <string name="header_ek4_string"> </string>
    <string name="label_text_string"></string>
</resources>