<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReviewPageDetail"
    android:background="@drawable/review_page_detail_nn">

    <View
        android:id="@+id/book_image"
        android:layout_width="90dp"
        android:layout_height="108dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="161dp"
        android:layout_marginTop="73dp" />

    <EditText
        android:id="@+id/writer"
        android:layout_width="104dp"
        android:layout_height="37dp"
        android:layout_gravity="center_horizontal|center"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="195dp"
        android:background="@null"
        android:gravity="center"
        android:hint="작가 작성란"
        android:text="@string/subhead_ek1_string"
        android:textColor="@color/subhead_color"
        android:textSize="14sp"
        tools:ignore="TouchTargetSizeCheck"
        android:maxLines="1"/>


    <EditText
        android:id="@+id/publisher"
        android:layout_width="104dp"
        android:layout_height="37dp"
        android:layout_gravity="center_horizontal|center"
        android:layout_marginLeft="270dp"
        android:layout_marginTop="195dp"
        android:background="@null"
        android:gravity="center"
        android:hint="출판사 작성란"
        android:text="@string/subhead_ek2_string"
        android:textColor="@color/subhead_color"
        android:textSize="14sp"
        tools:ignore="TouchTargetSizeCheck"
        android:maxLines="1"/>


    <EditText
        android:id="@+id/genre"
        android:layout_width="104dp"
        android:layout_height="37dp"
        android:layout_gravity="center_horizontal|center"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="220dp"
        android:background="@null"
        android:gravity="center"
        android:hint="장르 작성란"
        android:maxLines="1"
        android:text="@string/subhead_ek3_string"
        android:textColor="@color/subhead_color"
        android:textSize="14sp"
        tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/date_publishing"
        android:layout_width="84dp"
        android:layout_height="30dp"
        android:layout_gravity="center_horizontal|center"
        android:layout_marginLeft="270dp"
        android:layout_marginTop="220dp"
        android:gravity="center"
        android:hint="20nn.nn.nn"
        android:text="@string/subhead_ek4_string"
        android:textColor="@color/subhead_color"
        android:textSize="14sp" />

    <RelativeLayout
        android:layout_width="347dp"
        android:layout_height="257dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="32dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="327dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/eval1"
                android:layout_width="26dp"
                android:layout_height="17dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="0dp"
                android:gravity="center_vertical"
                android:text="@string/header"
                android:textAppearance="@style/header"/>

            <TextView
                android:id="@+id/score1"
                android:layout_width="21dp"
                android:layout_height="15dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="50dp"
                android:layout_marginTop="0dp"
                android:hint="5.4"
                android:text="" />

            <TextView
                android:id="@+id/review1"
                android:layout_width="326dp"
                android:layout_height="35dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="18dp"
                android:text="He'll want to use your yacht, and I don't want this thing smelling like fish."
                android:viewportWidth="326"
                android:viewportHeight="31"
                android:maxLines="2"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/eval2"
                android:layout_width="26dp"
                android:layout_height="17dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="60dp"
                android:gravity="center_vertical"
                android:text="@string/header"
                android:textAppearance="@style/header"/>

            <TextView
                android:id="@+id/score2"
                android:layout_width="21dp"
                android:layout_height="15dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="50dp"
                android:layout_marginTop="60dp"
                android:hint="5.2"
                android:text="" />

            <TextView
                android:id="@+id/review2"
                android:layout_width="326dp"
                android:layout_height="35dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="77dp"
                android:text="He'll want to use your yacht, and I don't want this thing smelling like fish."
                android:viewportWidth="326"
                android:viewportHeight="31"
                android:maxLines="2"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/eval3"
                android:layout_width="26dp"
                android:layout_height="17dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="115dp"
                android:gravity="center_vertical"
                android:text="@string/header"
                android:textAppearance="@style/header"/>

            <TextView
                android:id="@+id/score3"
                android:layout_width="21dp"
                android:layout_height="15dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="50dp"
                android:layout_marginTop="115dp"
                android:hint="5.1"
                android:text="" />

            <TextView
                android:id="@+id/review3"
                android:layout_width="326dp"
                android:layout_height="35dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="132dp"
                android:maxLines="2"
                android:text="He'll want to use your yacht, and I don't want this thing smelling like fish."
                android:viewportWidth="326"
                android:viewportHeight="31" />
        </RelativeLayout>
    </RelativeLayout>

    <ImageButton
        android:id="@+id/calender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="false"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="548dp"
        android:layout_marginRight="-94dp"
        android:background="@drawable/calender_navi_button"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/house"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="false"
        android:layout_marginLeft="190dp"
        android:layout_marginTop="548dp"
        android:layout_marginRight="-94dp"
        android:background="@drawable/main_navi_button"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck"/>

    <ImageButton
        android:id="@+id/writing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="false"
        android:layout_marginLeft="320dp"
        android:layout_marginTop="548dp"
        android:layout_marginRight="-94dp"
        android:background="@drawable/writing_navi_button"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />



</RelativeLayout>